<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.michelle.littleprincesses.ui.buyer.BuyerWelcome">

    <TextView android:text="@string/welcome_buyer" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/welcome_buyer"
        android:textSize="20sp"
        android:layout_marginTop="58dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_order"
        android:id="@+id/welcome_order"
        android:layout_below="@+id/welcome_buyer"
        android:layout_marginTop="66dp"
        android:layout_alignStart="@+id/welcome_status"
        android:layout_alignEnd="@+id/welcome_status" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_status"
        android:id="@+id/welcome_status"
        android:layout_marginTop="38dp"
        android:layout_below="@+id/welcome_order"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_logout"
        android:id="@+id/welcome_logout"
        android:layout_below="@+id/welcome_status"
        android:layout_marginTop="60dp"
        android:layout_alignEnd="@+id/welcome_status"
        android:layout_alignStart="@+id/welcome_status" />


</RelativeLayout>
